Fix outline on Safari

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -158,6 +158,7 @@
 .skill-card img {
     background-color: rgba(0, 0, 0, 0);
     filter: drop-shadow(0 0 0.5px var(--subtext));
+    -webkit-filter: drop-shadow(0 0 0.5px var(--subtext));
     display: flex;
     width: 3rem;
 }
